--- a/di-gi/css/style.css
+++ b/di-gi/css/style.css
@@ -1,14 +1,26 @@
+:root {
+    --text-coolor-white: #ffffff;
+    --text-color-dark: #4A4A4A;
+    --text-font-family-main: 'Roboto Condensed', sans-serif;
+    --text-font-famuly-buttons: 'Roboto', sans-serif;
+}
+.main {
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .header {
     background-color: #2B4074;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding-left: 153px;
+    padding-right: 135px;
     display: flex;
 }
 
 .menu_button {
-    display: flex;
-    justify-content: space-evenly;
     align-items: center;
+    border-radius: 3px;
     width: 40px;
     height: 40px;
     background-color: #ffffff;
@@ -17,4 +29,51 @@
 .header__logo {
     width: 100px;
     height: 65.73px;
+}
+
+.intro {
+    color: var(--text-coolor-white);
+    font-family: var(--text-font-family-main);
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 26px;
+    letter-spacing: 0px;
+    text-align: center;
+    vertical-align: bottom;
+    background-image: url('../images/bg-img.jpg');
+    min-height: 668px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.intro_text {
+    font-family: var(--text-font-family-main);
+    font-size: 24px;
+    width: 800px;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    font-family: var(--text-font-family-main);
+    width: 400px;
+    font-size: 96px;
+    line-height: 96px;
+    letter-spacing: 2px;
+    text-align: center;
+    vertical-align: bottom;
+    text-transform: uppercase;
+}
+
+.read_more_btn {
+    background-color: #2B4074;
+    text-transform: uppercase;
+    border-radius: 3px;
+    font-size: 18px;
+    font-family: var(--text-font-famuly-buttons);
+    color: var(--text-coolor-white);
+    width: 200px;
+    height: 50px;
 }
