--- a/di-gi/css/style.css
+++ b/di-gi/css/style.css
@@ -7,9 +7,11 @@
     --text-font-family-main: 'Roboto Condensed', sans-serif;
     --text-font-family-other: 'Roboto', sans-serif;
 }
+
 button {
     cursor: pointer;
 }
+
 .main {
     max-width: 1440px;
     width: 100%;
@@ -21,8 +23,9 @@ button {
     background-color: var(--background-color-dark);
     justify-content: space-between;
     align-items: center;
-    padding-left: 10%;
-    padding-right: 10%;
+    height: 100px;
+    padding-left: 11%;
+    padding-right: 9%;
     display: flex;
 }
 
@@ -67,6 +70,7 @@ main_title {
     display: flex;
     flex-direction: column;
 }
+
 .title {
     display: flex;
     justify-content: center;
@@ -195,34 +199,100 @@ main_title {
     margin-top: 2%;
     margin-bottom: 2%;
 }
+
 .services {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 4%;
-    padding-right: 4%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-left: 2%;
 }
-.services_intro {
+
+.services_text_description {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 2%;
+    padding: 2.7%;
+    margin-top: 2%;
+    max-width: 30%;
 }
-.services_head {
+
+.services_text_description>div {
+    margin-top: 4%;
+    margin-bottom: 4%;
+}
+
+.services_text_head {
     font-family: var(--text-font-family-main);
     font-size: 48px;
     color: var(--background-color-dark);
     font-weight: 400;
+    padding-bottom: 10px;
 }
-.services_main {
+
+.services_text_main {
     font-family: var(--text-font-family-other);
     font-size: 24px;
     font-weight: 400;
+    line-height: 26px;
     color: var(--text-color-dark);
-    margin-bottom: auto;
+    position: relative;
+    padding-top: 2px;
+    padding-bottom: 40px;
 }
-.services_content {
+
+.services_text_main::after {
+    content: "";
+    bottom: 0;
+    position: absolute;
+    left: 0;
+    height: 8px;
+    width: 100px;
+    background-color: var(--background-color-dark);
+}
+
+.services_text_content {
     font-family: var(--text-font-family-other);
+    line-height: 24px;
     color: var(--background-color-dark);
     font-size: 18px;
-    margin-top: auto;
+}
+
+.services_items {
+    flex: 2;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    background-color: var(--background-button-color);
+}
+
+.serv_item_btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--background-color-white);
+    margin: 1px;
+    min-width: 222px;
+    min-height: 255px;
+}
+
+.serv_item_btn:hover {
+    outline: 3px solid var(--background-color-dark);
+    outline-offset: -3px;
+}
+
+.service_image {
+    mask-image: url("../images/services/item1.png");
+    -webkit-mask-image: url("../images/services/item1.png");
+    /* Це дозволить міняти картинки в HTML */
+   /* mask-image: var(--image-url);*/
+
+    -webkit-mask-size: contain;
+    mask-size: contain;
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+
+    /* КОЛІР: тепер ви можете задати будь-який колір для всіх іконок одразу */
+    background-color: var(--background-color-dark);
 }
