--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,9 @@
 .footer {
     color: var(--background-color-dark);
 }
+.watch_btn {
+    border-radius: 3px;
+    background-color: var(--background-color-dark-);
+    width: 230px;
+    height: 60px;
+}
