--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,66 @@
 .footer {
-    color: var(--background-color-dark);
+    position: relative;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    background-color: var(--background-color-dark);
 }
+
 .watch_btn {
+    position: absolute;
+    left: 50%;
+    top: -30px;
+    transform: translateX(-50%);
     border-radius: 3px;
-    background-color: var(--background-color-dark-);
+    background-color: var(--background-color-dark);
     width: 230px;
     height: 60px;
+}
+.watch_btn .header__logo {
+    height: 100%;
+}
+.footer_cta {
+    font-family: var(--text-font-family-other);
+    color: var(--text-color-white);
+    font-size: 24px;
+    letter-spacing: 2px;
+    font-weight: 400;
+    line-height: 32px;
+}
+.social {
+    display: flex;
+
+}
+
+
+.up {
+    position: absolute;
+    
+    display: flex;
+    justify-content: end;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 42px;
+    background-color: var(--background-button-color);
+}
+.up_btn {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: var(--text-font-family-main-condensed);
+    background-color: var(--background-button-color);
+    color: var(--text-color-dark);
+    margin-right: 2%;
+    width: 130px;
+    height: 42px;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+}
+.up_btn .material-symbols-sharp {
+    font-size: 40px;
+    font-weight: 200;
 }
