--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     padding: 30px;
+    padding-bottom: 100px;
     background-color: var(--background-color-white);
 }
 .quote {
