--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
     position: relative;
     padding-top: 10%;
-    padding-bottom: 1%;
+    padding-bottom: 42px;
     padding-right: 8%;
     background-color: var(--background-color-dark);
 }
@@ -46,9 +46,9 @@
 
 
 .contacts .contact_item:nth-child(2) .social_link,
-.contacts .contact_item:nth-child(3) .social_link {
+.contacts .contact_item:nth-child(3) .social_link,
+.contacts .contact_item:nth-child(4) .social_link {
     border-left: 1px solid var(--footer-border-color);
-    border-right: 1px solid var(--footer-border-color);
 }
 
 .social_link {
@@ -94,6 +94,7 @@
 .widget_item h1 {
     padding-bottom: 10px;
 }
+
 .widget_name {
     font-family: var(--text-font-family-main-condensed);
     text-transform: uppercase;
@@ -102,6 +103,7 @@
     letter-spacing: 2px;
     color: var(--text-color-button-white);
 }
+
 .up {
     position: absolute;
 
@@ -135,4 +137,34 @@
 .up_btn .material-symbols-sharp {
     font-size: 40px;
     font-weight: 200;
+}
+
+@media screen and (max-width: 320px) {
+    .footer_cta {
+        font-size: 20px;
+        line-height: 22px;
+        text-align: center;
+    }
+
+    .contacts {
+        flex-direction: column;
+    }
+    .contacts .contact_item:nth-child(2) .social_link,
+    .contacts .contact_item:nth-child(3) .social_link,
+    .contacts .contact_item:nth-child(4) .social_link,
+    .social_link {
+        border: none;
+    }
+
+    .up {
+        height: 132px;
+        justify-content: center;
+        padding-bottom: 10px;
+    }
+
+    .up_btn {
+        height: 100%;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
 }
