--- a/css/intro.css
+++ b/css/intro.css
@@ -1,4 +1,3 @@
-
 .intro {
     color: var(--text-color-white);
     font-family: var(--text-font-family-main-condensed);
@@ -15,6 +14,20 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
+    position: relative;
+}
+
+.intro::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: #212121;
+    opacity: 0.5;
+    z-index: 1;
+}
+
+.intro > * {
+    z-index: 2;
 }
 
 .intro_text {
@@ -111,8 +124,9 @@
 
 .intro .indicator {
     background-color: var(--background-color-white);
-     border: 1px var(--background-color-white) solid;
+    border: 1px var(--background-color-white) solid;
 }
+
 .intro .indicator.active {
     background-color: transparent;
     cursor: default;
