--- a/css/promo.css
+++ b/css/promo.css
@@ -25,6 +25,7 @@
 .cta_text_wrapper {
     display: flex;
     flex-direction: column;
+    width: 60%;
 }
 
 h1.cta_text {
@@ -35,7 +36,6 @@ h1.cta_text {
     font-family: var(--text-font-family-other);
     color: var(--text-color-white);
     width: 100%;
-
 }
 
 p.cta_text {
@@ -43,7 +43,7 @@ p.cta_text {
     font-size: 16px;
     font-weight: 300;
     color: var(--text-color-white);
-    width: 60%;
+    width: 100%;
     margin-top: 2%;
     margin-bottom: 2%;
 }
@@ -55,5 +55,32 @@ p.cta_text {
     }
     p.cta_text {
         font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .promo {
+        flex-direction: column;
+        padding-bottom: 10%;
+    }
+    .cta_text_wrapper {
+        align-items: center;
+        padding-bottom: 30px;
+        width: 100%;
+    }
+    h1.cta_text {
+        font-size: 24px;
+        line-height: 24px;
+        text-align: center;
+    }
+    p.cta_text {
+        font-size: 16px;
+        line-height: 18px;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 320px) {
+    .promo {
+        padding-bottom: 15%;
     }
 }
