--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,7 @@ section {
 .main {
     max-width: 1440px;
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 
 
