--- a/css/footer.css
+++ b/css/footer.css
@@ -3,6 +3,7 @@
     padding-top: 10%;
     padding-bottom: 42px;
     padding-right: 8%;
+    padding-left: 10%;
     background-color: var(--background-color-dark);
 }
 
