digi_header_menu

--- a/css/footer.css
+++ b/css/footer.css
@@ -14,9 +14,11 @@
     width: 230px;
     height: 60px;
 }
+
 .footer_br {
     display: none;
 }
+
 .footer__logo_btn .header__logo {
     height: 100%;
 }
@@ -40,7 +42,7 @@
     list-style: none;
 }
 
-.footer__socials li:nth-child(n+2) {
+.footer__socials li+li {
     border-left: 1px solid var(--footer-border-color);
 }
 
@@ -90,7 +92,6 @@
     font-weight: 400;
     font-size: 12px;
     line-height: 20px;
-    padding-left: 0;
 }
 
 .footer__item_name {
@@ -161,57 +162,68 @@
     #footer {
         padding-bottom: 1%;
     }
+
     .footer__socials {
         margin-bottom: 60px;
     }
+
     .footer__nav {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 30px;
         margin-top: 0px;
         margin-bottom: 90px;
-    }  
+    }
+
     .footer__item_name {
         padding-bottom: 30px;
-    }  
+    }
 }
 
 @media screen and (max-width: 640px) {
-.footer__title {
+    .footer__title {
         font-size: 24px;
         line-height: 26px;
     }
 }
+
 @media screen and (max-width: 320px) {
     #footer {
         padding: 100px 20px;
     }
-    .footer__socials li:nth-child(n+2) {
+
+    .footer__socials li+li {
         border-left: none;
     }
+
     .footer_br320 {
         display: inline;
     }
-   
+
     .footer__socials {
         flex-direction: column;
         margin-top: 20px;
         margin-bottom: 20px;
     }
+
     .footer__socials a {
         border: none;
     }
+
     .footer__title {
         font-size: 20px;
         line-height: 22px;
         text-align: center;
     }
+
     .footer__nav {
         grid-template-columns: repeat(1, 1fr);
     }
+
     .footer__nav li {
         justify-content: center;
     }
+
     .up {
         height: 132px;
         justify-content: center;
