--- a/css/header.css
+++ b/css/header.css
@@ -1,18 +1,28 @@
-
-.header {
+#header {
     background-color: var(--background-color-dark);
     justify-content: space-between;
     align-items: center;
-    height: 100px;
     display: flex;
+    padding: 30px 10%;
+    position: relative;
+    z-index: 100;
+}
+
+input {
+    display: none;
+    visibility: hidden;
 }
 
 .menu_button {
+    display: flex;
+    justify-content: center;
     align-items: center;
     border-radius: 3px;
     width: 40px;
     height: 40px;
+    color: var(--text-color-dark-blue);
     background-color: var(--background-color-white);
+    cursor: pointer;
 }
 
 .header__logo {
@@ -20,13 +30,45 @@
     height: 65.73px;
 }
 
-.nav-menu {
-    background-color: var(--background-button-color);
-    font-family: var(--text-font-family-other);
-    color: var(--text-color-button-dark);
-    font-size: 24px;
-    letter-spacing: 2px;
-    font-weight: 700;
+.header__nav_menu {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 0 3px 3px 3px;
+    background-color: var(--background-color-white);
+    overflow: hidden;
+    transition: all 0.5s ease;
+}
+
+.header__nav_menu a {
     text-decoration: none;
-    cursor: pointer;
+    font-family: var(--text-font-family-other);
+    color: var(--text-color-dark-blue);
+    padding-left: 10px;
+}
+
+.header__nav_menu li {
+    background-color: var(--background-color-white);
+    padding: 10px 0;
+    width: 140px;
+}
+.header__nav_menu li:hover {
+    background-color: var(--background-button-color);
+}
+input:checked~.menu_button {
+    border-radius: 3px 3px 0 0;
+}
+input:checked~.header__nav_menu {
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.5s ease;
+}
+@media screen and (max-width: 1024px) {
+    #header {
+        padding-right: 40px;
+    }
+    .header__nav_menu {
+        transform: translateX(-100px);
+        border-radius: 3px 0 3px 3px;
+    }
 }
