--- a/css/recent-work.css
+++ b/css/recent-work.css
@@ -69,7 +69,10 @@
     inset: 12px;
 }
 
-.hover_info img {
+.hover_info svg {
+    fill: var(--background-color-dark);
+    width: 28px;
+    height: 28px;
     margin: 7px;
     cursor: pointer;
 }
