--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ input {
     cursor: pointer;
 }
 
+.menu_button:hover {
+    background-color: var(--background-button-color);
+}
+
 .header__logo {
     width: 100px;
     height: 65.73px;
@@ -803,7 +807,7 @@ p.cta_text {
     display: flex;
     flex-direction: row;
     gap: 50px;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: stretch;
     margin-top: -30px;
     padding-bottom: 100px;
@@ -864,7 +868,6 @@ img.video {
 
 .play_video_btn {
     color: var(--text-color-button-white);
-    margin-top: 10px;
     background-color: var(--background-color-dark);
     max-width: 230px;
 }
@@ -1294,6 +1297,10 @@ img.video {
     padding: 20px 0;
     border-bottom: 1px solid var(--footer-border-color);
     border-top: 1px solid var(--footer-border-color);
+}
+
+.footer__socials a:hover {
+    color: var(--text-color-button-hover-white);
 }
 
 .footer__nav {
